--- a/index.html
+++ b/index.html
@@ -186,5 +186,34 @@
           </section>
       </main>
 
+<!-- view all blog -->
+<div class="view-all-button">
+  <div>
+    <h3>View All</h3>
+  </div>
+</div>
+
+<!-- footer section  -->
+  <section>
+    <footer class="footer-section">
+      <div class="footer-detail">
+        <div>
+          <h1>Goal</h1>
+       <hr>
+        <div class="footer-info">
+          <div>
+            <p>Contact Us</p>
+          <p>Terms of Service</p>
+          <p>Privacy Policy</p>
+          <p>Privacy Settings  </p>
+          <p>Goal App</p>
+          <p>Goal Live</p>
+          </div>
+        </div>
+        </div>
+      </div>
+    </footer>
+  </section>
+     
   </body>
 </html>
