another html file blog added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/742c82c001.js" crossorigin="anonymous"></script>
     </style>
     <!-- link with external css file -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     <!-- header section  -->
