--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
             <div class="banner-container">
               <div class="header-banner">
-                <img src="/images/Banner Image.png" alt="">
+                <img src="images/Banner Image.png" alt="">
               </div>
             </div>
       </header>
