footer responsive done

--- a/index.html
+++ b/index.html
@@ -191,21 +191,20 @@
 </div>
 
 <!-- footer section  -->
-  <section>
-    <footer class="footer-section">
+  <section class="footer-section">
+    <footer class="container">
       <div class="footer-detail">
-        <div>
           <h1>Goal</h1>
-       <hr>
+          <hr>
         <div class="footer-info">
-          <div>
-            <p>Contact Us</p>
+            <div>
+              <p>Contact Us</p>
           <p>Terms of Service</p>
           <p>Privacy Policy</p>
           <p>Privacy Settings  </p>
           <p>Goal App</p>
           <p>Goal Live</p>
-          </div>
+            </div>
         </div>
         </div>
       </div>
