subscribe section added

--- a/index.html
+++ b/index.html
@@ -190,6 +190,20 @@
   </div>
 </div>
 
+<section class="container">
+  <div class="subscribe-section">
+    <h1>Gets Updates</h1>
+<div class=" subscribe-box">
+  <div class="outer-box">
+    <div class="inner-box">
+      <input type="email" name="" id="" placeholder="Enter Your Email">
+      <input type="submit" value="Subscribe">
+    </div>
+  </div>
+</div>
+  </div>
+</section>
+
 <!-- footer section  -->
   <section class="footer-section">
     <footer class="container">
