--- a/another-html.html
+++ b/another-html.html
@@ -133,26 +133,25 @@
 </main>
 
 <!-- footer section  -->
-  <section>
-    <footer class="footer-section">
-      <div class="footer-detail">
-        <div>
-          <h1>Goal</h1>
-       <hr>
-        <div class="footer-info">
+<section class="footer-section">
+  <footer class="container">
+    <div class="footer-detail">
+        <h1>Goal</h1>
+        <hr>
+      <div class="footer-info">
           <div>
             <p>Contact Us</p>
-          <p>Terms of Service</p>
-          <p>Privacy Policy</p>
-          <p>Privacy Settings  </p>
-          <p>Goal App</p>
-          <p>Goal Live</p>
+        <p>Terms of Service</p>
+        <p>Privacy Policy</p>
+        <p>Privacy Settings  </p>
+        <p>Goal App</p>
+        <p>Goal Live</p>
           </div>
-        </div>
-        </div>
       </div>
-    </footer>
-  </section>
+      </div>
+    </div>
+  </footer>
+</section>
      
   </body>
 </html>
