--- a/another-html.html
+++ b/another-html.html
@@ -38,7 +38,7 @@
 <section class="match-and-blogs-container">
   <!-- upcomming match section  -->
   <div class="upcomming-match">
-    <button>upcomming Match</button>
+    <button class="upcomming">Upcomming Match</button>
     <button>All Group</button>
     <button class="blog-button">Blog</button>
   </div>
