--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <section class="match-and-blogs-container">
   <!-- upcomming match section  -->
   <div class="upcomming-match">
-    <button>upcomming Match</button>
+    <a  class="upcomming" href="another-html.html">Upcomming Match</a>
     <button>All Group</button>
     <button class="blog-button">Blog</button>
   </div>
@@ -186,7 +186,7 @@
 <!-- view all blog -->
 <div class="view-all-button">
   <div>
-    <a href="another-html.html">View All</a>
+    <a href="">View All</a>
   </div>
 </div>
 
