social icon added

--- a/another-html.html
+++ b/another-html.html
@@ -150,6 +150,16 @@
       </div>
       </div>
     </div>
+     <!-- here added social link  -->
+     <div class="social-link">
+      <h3>Follow Us:</h3>
+    <div class="social-font">
+      <p><a href="https://www.facebook.com/home.php"><i class="fa-brands fa-facebook"></i></a></p>
+    <p><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></p>
+    <p><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a></p>
+    <p><a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin"></i></a></p>
+    </div>
+    </div>
   </footer>
 </section>
      
