final commit all done

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <section class="match-and-blogs-container">
   <!-- upcomming match section  -->
   <div class="upcomming-match">
-    <a  class="upcomming" href="another-html.html">Upcomming Match</a>
+    <a  class="upcomming" href="upcomming.html">Upcomming Match</a>
     <button>All Group</button>
     <button class="blog-button">Blog</button>
   </div>
