--- a/upcomming.html
+++ b/upcomming.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/742c82c001.js" crossorigin="anonymous"></script>
     </style>
     <!-- link with external css file -->
-    <link rel="stylesheet" href="styles/another-style.css">
+    <link rel="stylesheet" href="styles/upcomming.css">
   </head>
   <body>
 <!-- header section  -->
